Fixed display of readable content and some dynamic container widths in elementor.

--- a/assets/less/content.less
+++ b/assets/less/content.less
@@ -166,7 +166,7 @@
 }
 
 /* Makes content readable width. Does not apply to pagebuilders and woocommerce pages */
-body .readable-content {
+body .content.readable-content {
     p, h2, h3, h4, h5, h6, ol, ul, pre, code, ins, mark, cite, em, b, strong, table, 
     .wp-block-audio, 
     .wp-block-file, 
@@ -183,7 +183,7 @@ body .readable-content {
 }
 
 body.elementor-page, body.woocommerce-page {
-    .readable-content {
+    .content.readable-content {
         p, h2, h3, h4, h5, h6, ol, ul, pre, code, ins, mark, cite, em, b, strong, table, 
         .wp-block-audio, 
         .wp-block-file, 
